Improved UI and add animations

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
 
         <!-- ========== About Me Section ========== -->
-        <section id="about" class="section">
+        <section id="about" class="section reveal">
             <h2>About Me</h2>
             <p>
                 I am a final-year Computer Engineering undergraduate at the Arab Academy for Science and Technology with an immense passion for Artificial Intelligence. I thrive on bridging the gap between theoretical concepts and practical, real-world applications. Discovering new technologies and innovative solutions constantly fuels my curiosity and leads to many "aha" moments. I'm eager to leverage my growing skills and enthusiasm in a challenging AI-focused role.
@@ -39,7 +39,7 @@
         </section>
 
         <!-- ========== Technical Skills Section ========== -->
-        <section id="skills" class="section">
+        <section id="skills" class="section reveal">
             <h2>Technical Skills</h2>
             <div class="skills-grid">
                 <div>
@@ -95,23 +95,23 @@
         </section>
 
         <!-- ========== Projects Showcase Section ========== -->
-        <section id="projects" class="section">
+        <section id="projects" class="section reveal">
             <h2>Projects Showcase</h2>
 
             <h3>Highlighted Projects</h3>
             <div class="projects-grid">
-                <div class="project-card">
+                <div class="project-card reveal">
                     <h4>AI Model Development for En2ly (Startup)</h4>
                     <p>Integrated a multi-head AI model (classifying furniture type & estimating dimensions) into a startup's backend. Trained on Bonn Furniture Styles Dataset, optimized locally, and converted to ONNX/TFLite for real-time use.</p>
                     <span class="repo-status">Private Repository</span>
                 </div>
-                 <div class="project-card">
+                 <div class="project-card reveal">
                     <h4>Fawry Competition (On-going) - Phase 1 Qualified</h4>
                     <p><strong>Face Identification:</strong> Developed a deep learning face re-id system. Fine-tuned InceptionResNetV1 (VGGFace2) with ArcMarginProduct, achieving 90% validation accuracy using custom PyTorch datasets and cosine similarity.</p>
                      <p><strong>Multi-Object Tracking:</strong> Built a pedestrian tracking system using YOLOv8 (detection) and ByteTrack (tracking) on the MOT20 dataset, achieving 65% HOTA. Included custom training and hyperparameter tuning.</p>
                     <span class="repo-status">Private Repository (Competition)</span>
                 </div>
-                <div class="project-card">
+                <div class="project-card reveal">
                     <h4>English-Arabic Neural Machine Translation</h4>
                     <p>Built LSTM-based seq2seq models (with/without attention) in TensorFlow/Keras. Developed data preprocessing pipelines for tokenization and encoding.</p>
                     <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
@@ -128,7 +128,7 @@
         </section>
 
         <!-- ========== Education & Credentials Section ========== -->
-        <section id="education" class="section">
+        <section id="education" class="section reveal">
             <h2>Education & Credentials</h2>
 
             <h3>Education</h3>
