fixed the hardcoded projects to show the read more button

--- a/index.html
+++ b/index.html
@@ -100,39 +100,45 @@
 
             <h3>Highlighted Projects</h3>
             <div class="projects-grid">
+
+                <!-- AI Model Development Card - CLEANED -->
                 <div class="project-card reveal">
                     <h4>AI Model Development for En2ly (Startup)</h4>
-                    <div class="project-description"> {/* Added this wrapper */}
-                        <p>Integrated a multi-head AI model...</p>
+                    <div class="project-description">
+                        <p>Integrated a multi-head AI model (classifying furniture type & estimating dimensions) into a startup's backend. Trained on Bonn Furniture Styles Dataset, optimized locally, and converted to ONNX/TFLite for real-time use.</p>
                     </div>
-                    <div class="project-footer"> {/* Added footer wrapper */}
-                         <span class="repo-status">Private Repository</span>
-                         {/* Read More button will be added here by JS if needed */}
+                    <div class="project-footer">
+                        <span class="repo-status">Private Repository</span>
+                        <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
+
+                <!-- Fawry Competition Card - CLEANED -->
                 <div class="project-card reveal">
                     <h4>Fawry Competition (On-going) - Phase 1 Qualified</h4>
-                    <div class="project-description"> {/* Description wrapper */}
+                    <div class="project-description">
                         <p><strong>Face Identification:</strong> Developed a deep learning face re-id system. Fine-tuned InceptionResNetV1 (VGGFace2) with ArcMarginProduct, achieving 90% validation accuracy using custom PyTorch datasets and cosine similarity.</p>
                         <p><strong>Multi-Object Tracking:</strong> Built a pedestrian tracking system using YOLOv8 (detection) and ByteTrack (tracking) on the MOT20 dataset, achieving 65% HOTA. Included custom training and hyperparameter tuning.</p>
-                         {/* Both paragraphs go inside the description wrapper */}
                     </div>
-                    <div class="project-footer"> {/* Footer wrapper */}
+                    <div class="project-footer">
                         <span class="repo-status">Private Repository (Competition)</span>
-                        {/* Read More button will be added here by JS if needed */}
+                        <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
+
+                <!-- English-Arabic NMT Card - CLEANED -->
                 <div class="project-card reveal">
                     <h4>English-Arabic Neural Machine Translation</h4>
-                    <div class="project-description"> {/* Description wrapper */}
+                    <div class="project-description">
                         <p>Built LSTM-based seq2seq models (with/without attention) in TensorFlow/Keras. Developed data preprocessing pipelines for tokenization and encoding.</p>
                     </div>
-                    <div class="project-footer"> {/* Footer wrapper */}
+                    <div class="project-footer"> {/* Corrected class name here */}
                         <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
-                        {/* Read More button will be added here by JS if needed */}
+                        <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
-                 <!-- Add other key projects from CV if desired -->
+
+                 <!-- Add other key projects from CV if desired, following the same structure -->
 
             </div>
 
