fixed the cards again by removing an commented comment

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="project-description">
                         <p>Built LSTM-based seq2seq models (with/without attention) in TensorFlow/Keras. Developed data preprocessing pipelines for tokenization and encoding.</p>
                     </div>
-                    <div class="project-footer"> {/* Corrected class name here */}
+                    <div class="project-footer">
                         <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
                         <!-- Read More button potentially added by JS here -->
                     </div>
