feat: Add Download CV button with primary styling to hero
Enhanced hero section layout by converting .social-links to Flexbox. Implemented .btn styles for download functionality.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/14b5afba50.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -25,6 +26,11 @@
                 <a href="https://github.com/MHamdyK" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <a href="https://linkedin.com/in/mohamdyk" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 <a href="mailto:eng.mohamed.hamdy@hotmail.com">Email</a>
+    
+                <a href="Mohamed_Hamdy_CV.pdf" download class="btn btn-primary">
+                    <i class="fa-solid fa-download"></i> Download CV
+                </a>          
+                                 
                 <span>(+20) 1022028765</span>
                 <span>Cairo, Egypt</span>
             </div>
