feat: Add tech tags to highlighted projects
Implemented styled tags (.tag) within project cards. Updated .project-footer flex layout for responsive alignment.

--- a/index.html
+++ b/index.html
@@ -113,19 +113,26 @@
             <h3>Highlighted Projects</h3>
             <div class="projects-grid">
 
-                <!-- AI Model Development Card - CLEANED -->
+                <!-- AI Model Development Card - WITH TAGS -->
                 <div class="project-card reveal">
                     <h4>AI Model Development for En2ly (Startup)</h4>
                     <div class="project-description">
                         <p>Integrated a multi-head AI model (classifying furniture type & estimating dimensions) into a startup's backend. Trained on Bonn Furniture Styles Dataset, optimized locally, and converted to ONNX/TFLite for real-time use.</p>
                     </div>
                     <div class="project-footer">
+                        <!-- ADDED TAGS WRAPPER -->
+                        <div class="tech-tags">
+                            <span class="tag">AI</span>
+                            <span class="tag">CV</span>
+                            <span class="tag">ONNX</span>
+                            <span class="tag">TFLite</span>
+                        </div>
                         <span class="repo-status">Private Repository</span>
                         <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
 
-                <!-- Fawry Competition Card - CLEANED -->
+                <!-- Fawry Competition Card - WITH TAGS -->
                 <div class="project-card reveal">
                     <h4>Fawry Competition (On-going) - Phase 1 Qualified</h4>
                     <div class="project-description">
@@ -133,24 +140,36 @@
                         <p><strong>Multi-Object Tracking:</strong> Built a pedestrian tracking system using YOLOv8 (detection) and ByteTrack (tracking) on the MOT20 dataset, achieving 65% HOTA. Included custom training and hyperparameter tuning.</p>
                     </div>
                     <div class="project-footer">
+                        <!-- ADDED TAGS WRAPPER -->
+                         <div class="tech-tags">
+                            <span class="tag">PyTorch</span>
+                            <span class="tag">CV</span>
+                            <span class="tag">Deep Learning</span>
+                            <span class="tag">YOLOv8</span>
+                        </div>
                         <span class="repo-status">Private Repository (Competition)</span>
                         <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
 
-                <!-- English-Arabic NMT Card - CLEANED -->
+                <!-- English-Arabic NMT Card - WITH TAGS -->
                 <div class="project-card reveal">
                     <h4>English-Arabic Neural Machine Translation</h4>
                     <div class="project-description">
                         <p>Built LSTM-based seq2seq models (with/without attention) in TensorFlow/Keras. Developed data preprocessing pipelines for tokenization and encoding.</p>
                     </div>
                     <div class="project-footer">
+                        <!-- ADDED TAGS WRAPPER -->
+                        <div class="tech-tags">
+                             <span class="tag">TensorFlow</span>
+                             <span class="tag">Keras</span>
+                             <span class="tag">NLP</span>
+                             <span class="tag">LSTM</span>
+                        </div>
                         <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
                         <!-- Read More button potentially added by JS here -->
                     </div>
                 </div>
-
-                 <!-- Add other key projects from CV if desired, following the same structure -->
 
             </div>
 
