--- a/index.html
+++ b/index.html
@@ -122,10 +122,13 @@
                     <div class="project-footer">
                         <!-- ADDED TAGS WRAPPER -->
                         <div class="tech-tags">
-                            <span class="tag">AI</span>
+                            <span class="tag">multi-head</span>
+                            <span class="tag">Regression</span>
+                            <span class="tag">classification</span>
                             <span class="tag">CV</span>
                             <span class="tag">ONNX</span>
                             <span class="tag">TFLite</span>
+                            <span class="tag">Pytorch</span>
                         </div>
                         <span class="repo-status">Private Repository</span>
                         <!-- Read More button potentially added by JS here -->
@@ -145,7 +148,11 @@
                             <span class="tag">PyTorch</span>
                             <span class="tag">CV</span>
                             <span class="tag">Deep Learning</span>
-                            <span class="tag">YOLOv8</span>
+                            <span class="tag">ArcFace</span>
+                            <span class="tag">ResNet</span>
+                            <span class="tag">YOLO</span>
+                            <span class="tag">ByteTrack</span>
+
                         </div>
                         <span class="repo-status">Private Repository (Competition)</span>
                         <!-- Read More button potentially added by JS here -->
@@ -165,6 +172,8 @@
                              <span class="tag">Keras</span>
                              <span class="tag">NLP</span>
                              <span class="tag">LSTM</span>
+                             <span class="tag">Seq2Seq</span>
+                             <span class="tag">RNN</span>
                         </div>
                         <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
                         <!-- Read More button potentially added by JS here -->
