--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>
             <!-- Separate container for static contact info -->
             <p class="hero-contact-info">
-                <span><i class="fa-solid fa-phone"></i> (+20) 1022028765</span>
+                <span><i class="fa-solid fa-phone"></i> (+20) 102202XXXX</span>
                 <span><i class="fa-solid fa-location-dot"></i> Cairo, Egypt</span>
             </p>
             <!-- Container for interactive links and the main button -->
