added fastAPI in skills

--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
                     <ul>
                         <li>Git / GitHub</li>
                         <li>Linux</li>
+                        <li>FastAPI</li>
+                        <li>Docker (Basic)</li>
                         <li>Tableau</li>
                         <li>Power BI</li>
-                        <li>Docker (Basic)</li>
                         <li>Microcontrollers</li>
                     </ul>
                 </div>
@@ -105,7 +106,7 @@
                         <li>Object-Oriented Programming</li>
                         <li>Machine Learning Pipelines</li>
                         <li>Data Augmentation</li>
-                         <li>Model Optimization</li>
+                        <li>Model Optimization</li>
                     </ul>
                 </div>
             </div>
