fixed the tools cards

--- a/index.html
+++ b/index.html
@@ -127,13 +127,14 @@
                     </div>
                     <div class="project-footer">
                         <div class="tech-tags">
+                            <span class="tag">CV</span>
+                            <span class="tag">Pytorch</span>
                             <span class="tag">multi-head</span>
                             <span class="tag">Regression</span>
                             <span class="tag">classification</span>
-                            <span class="tag">CV</span>
                             <span class="tag">ONNX</span>
                             <span class="tag">TFLite</span>
-                            <span class="tag">Pytorch</span>
+                            
                         </div>
                         <span class="repo-status">Private Repository</span>
                         <!-- Read More button potentially added by JS here -->
@@ -149,13 +150,13 @@
                     </div>
                     <div class="project-footer">
                          <div class="tech-tags">
-                            <span class="tag">PyTorch</span>
                             <span class="tag">CV</span>
-                            <span class="tag">Deep Learning</span>
+                            <span class="tag">PyTorch</span>
                             <span class="tag">ArcFace</span>
                             <span class="tag">ResNet</span>
                             <span class="tag">YOLO</span>
                             <span class="tag">ByteTrack</span>
+                            <span class="tag">Deep Learning</span>
 
                         </div>
                         <span class="repo-status">Private Repository (Competition)</span>
@@ -171,12 +172,13 @@
                     </div>
                     <div class="project-footer">
                         <div class="tech-tags">
+                             <span class="tag">NLP</span>
                              <span class="tag">TensorFlow</span>
                              <span class="tag">Keras</span>
-                             <span class="tag">NLP</span>
                              <span class="tag">LSTM</span>
                              <span class="tag">Seq2Seq</span>
                              <span class="tag">RNN</span>
+                             <span class="tag">Translation</span>
                         </div>
                         <a href="https://github.com/MHamdyK/Neural-Machine-Translation-Eng-Arb" target="_blank" rel="noopener noreferrer" class="repo-link">View on GitHub</a>
                         <!-- Read More button potentially added by JS here -->
