Revert "feat: Add GitHub repo slider with navigation and pagination"
This reverts commit a9e3d7d8570c1da8aa3bb42aee05ab2f04cb0a34.

--- a/index.html
+++ b/index.html
@@ -189,15 +189,9 @@
 
             <h3>Other Public Repositories</h3>
             <div id="github-projects-loading">Loading repositories from GitHub...</div>
-            <!-- Slider container for the fetched GitHub repos -->
-            <div id="github-slider" class="github-slider" style="display:none;">
-                <button id="slider-prev" class="slider-arrow slider-prev">&#10094;</button>
-                <!-- This container will be filled with repo cards by script.js -->
-                <div id="github-projects" class="projects-slider"></div>
-                <button id="slider-next" class="slider-arrow slider-next">&#10095;</button>
+            <div id="github-projects" class="projects-grid">
+                <!-- GitHub repositories will be loaded here by script.js -->
             </div>
-            <!-- Pagination dots for the slider -->
-            <div id="slider-dots" class="slider-dots" style="display:none;"></div>
         </section>
 
         <!-- ========== Education & Credentials Section ========== -->
