Updated Courses & Certificates with DSA course

--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
 
             <h3>Courses & Certificates</h3>
             <ul class="credentials-list">
-                <li>DEPI (Digital Egypt Pioneers Initiative) - Google Data Analyst Specialist <span class="date">(Oct 2024 - Present)</span></li>
+                <li>Dr Mostafa Saad CSkilled Python DSA course <span class="date">(Jan 2025 - Present)</span></li>
+                <li>DEPI (Digital Egypt Pioneers Initiative) - Google Data Analyst Specialist <span class="date">(Oct 2024 - February 2025)</span></li>
                 <li>Embedded Systems Engineer – AMIT Embedded Systems Course (Scholarship by Orange) <a href="https://drive.google.com/file/d/10bTU-CYnt1LvU4HfYP1UMeaV4PL-8A6H/view" target="_blank" rel="noopener noreferrer">[Certificate Link]</a> <span class="date">(Sep 2024)</span></li>
                 <li>Machine Learning Specialization (Coursera by Stanford Online & DeepLearning.AI) <span class="date">(May 2024)</span></li>
                 <li>Zero to Mastery: Learn PyTorch for Deep Learning (Udemy) <span class="date">(Jan 2024)</span></li>
